# QAGURU_hw_6.21

./: conftest.py  pyproject.toml
tests/catfact/: test_breed_list.py
tests/catfact/schemas/: breeds_list_schema.json
tests/reqres/: test_get_single_user.py
